Composite item model type wip