@@ -2,17 +2,26 @@ package timmychips.pommelheldmodels.property.type;
 
 import com.mojang.datafixers.util.Either;
 import com.mojang.serialization.Codec;
+import net.minecraft.util.Identifier;
 
 import java.util.List;
 
 public class CodecUtils {
-    // Accepts either a string or a list of strings
-    public static final Codec<List<String>> STRING_OR_LIST = Codec.either(
-            Codec.STRING, Codec.STRING.listOf()
-    ).xmap(
-            either -> either.map(List::of, list -> list),
-            list -> list.size() == 1 ? Either.left(list.getFirst()) : Either.right(list)
-    );
+    /**
+     * Custom Codec that accepts either short form ("arrow") or full form ("minecraft:arrow")
+     * and always converts to an Identifier with a namespace.
+     */
+    public static final class IdentifierOrStringCodec {
+        public static final Codec<Identifier> INSTANCE = Codec.STRING.xmap(
+                str -> {
+                    if (!str.contains(":")) {
+                        return Identifier.of("minecraft", str);
+                    }
+                    return Identifier.of(str);
+                },
+                Identifier::toString
+        );
+    }
 
     public static <T> Codec<List<T>> ofValueOrList(Codec<T> valueCodec) {
         return Codec.either(
@@ -21,7 +30,7 @@ public class CodecUtils {
         ).xmap(
                 either -> either.map(List::of, list -> list),
                 list -> list.size() == 1
-                        ? com.mojang.datafixers.util.Either.left(list.get(0))
+                        ? com.mojang.datafixers.util.Either.left(list.getFirst())
                         : com.mojang.datafixers.util.Either.right(list)
         );
     }
